fix meta tag, took out hovatext vertial align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -233,7 +233,7 @@ div.container1.p {
 	padding: 10%;
 	display: table-cell;
 	text-align: center;
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 	margin: 30% 30% 30% 30%;
 
 
